[metadata]
name = kaltura_uploader
version = 0.1.0
author = Zohar Babin
author_email = zohar.babin@kaltura.com
description = A robust Python tool for uploading files to Kaltura with chunked and adaptive upload support, automatic MIME type detection, and entry creation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zoharbabin/kaltura_uploader
license = MIT
license_files = LICENSE
keywords = kaltura, upload, chunked, adaptive, video, media, file, cli

# Optional additional URLs
project_urls =
    Bug Tracker = https://github.com/zoharbabin/kaltura_uploader/issues
    Documentation = https://github.com/zoharbabin/kaltura_uploader#readme

# Classifiers help users find your project by categories
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    python-dotenv
    python-magic
    colorlog
    requests
    requests-toolbelt
    KalturaApiClient
    lxml

[options.entry_points]
console_scripts =
    kaltura_uploader = kaltura_uploader.cli:main

[options.extras_require]
# Example extras
test =
    pytest

[options.package_data]
# Include non-Python files if needed, for example:
#   include any .yaml, .ini, etc. inside the package
#   (Note: "include_package_data = True" also picks up those
#    specified in MANIFEST.in)
# * = *.yaml, *.ini, *.json

[bdist_wheel]
# This is a pure-Python (no compiled code) project that only supports Py3:
universal = 0
